# daftcode-cpp

./: CMakeLists.txt  Doxyfile  PointsContainer.cpp  PointsContainer.h  Polygon.cpp  Polygon.h  README.md  Vertex.cpp  Vertex.h  geometry.cpp  geometry.h  main.cpp  nodes.csv  polygons.csv  read_data.cpp  read_data.h
